--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="#pricing" class="hover:text-cyan-400 transition-colors">Premium</a>
                 <a href="#rules" class="hover:text-cyan-400 transition-colors">Rules</a>
             </nav>
-            <a href="https://t.me/your_bot_username_here" target="_blank" class="gradient-bg text-white font-semibold px-5 py-2 rounded-lg hover:opacity-90 transition-opacity">
+            <a href="https://t.me/DealmanyBot?start=start" target="_blank" class="gradient-bg text-white font-semibold px-5 py-2 rounded-lg hover:opacity-90 transition-opacity">
                 Launch Bot
             </a>
         </div>
@@ -75,7 +75,7 @@
                 Welcome to ADsphere, the ultimate Telegram bot for promoting your content and earning rewards. Grow your audience with a powerful, fair, and intuitive system.
             </p>
             <div class="flex justify-center space-x-4">
-                <a href="https://t.me/your_bot_username_here" target="_blank" class="gradient-bg text-white font-bold px-8 py-3 rounded-lg hover:opacity-90 transition-transform hover:scale-105">
+                <a href="https://t.me/DealmanyBot?start=start" target="_blank" class="gradient-bg text-white font-bold px-8 py-3 rounded-lg hover:opacity-90 transition-transform hover:scale-105">
                     Start Promoting Now
                 </a>
                 <a href="#features" class="bg-slate-800 text-slate-300 font-bold px-8 py-3 rounded-lg hover:bg-slate-700 transition-colors">
@@ -91,7 +91,7 @@
                 <div class="bg-slate-800/50 p-6 rounded-xl border border-slate-700 transition-all hover:border-cyan-400 hover:scale-105">
                     <div class="gradient-bg w-12 h-12 rounded-lg flex items-center justify-center mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg></div>
                     <h4 class="text-xl font-semibold mb-2">Dynamic Ad Campaigns</h4>
-                    <p class="text-slate-400">Promote your links and channels with our intuitive campaign creator. Set your budget and watch your views grow.</p>
+                    <p class="text-slate-400">Promote your links and channels with our intuitive campaign creator. Set your budget and watch your views grow. Adding the bot as admin in your channel/group is important for force join promo</p>
                 </div>
                 <div class="bg-slate-800/50 p-6 rounded-xl border border-slate-700 transition-all hover:border-cyan-400 hover:scale-105">
                     <div class="gradient-bg w-12 h-12 rounded-lg flex items-center justify-center mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01" /></svg></div>
@@ -113,7 +113,7 @@
             <div class="max-w-xs mx-auto phone-screen">
                 <div class="relative w-full h-auto aspect-[9/19.5] rounded-2xl overflow-hidden">
                     <video class="w-full h-full object-cover" autoplay loop muted playsinline>
-                        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+                        <source src="addsss.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -126,22 +126,22 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto">
                 <div class="bg-slate-800/50 p-8 rounded-xl border border-slate-700 text-center">
                     <h4 class="text-2xl font-semibold mb-2">1 Week</h4>
-                    <p class="text-4xl font-bold mb-4">20 ⭐</p>
+                    <p class="text-4xl font-bold mb-4">15⭐</p>
                     <ul class="text-slate-400 space-y-2 mb-6"><li>Double Rewards</li><li>More Daily Promos</li><li>Image Broadcasts</li></ul>
-                    <a href="https://t.me/your_bot_username_here" target="_blank" class="bg-slate-700 text-white font-semibold w-full block py-3 rounded-lg hover:bg-slate-600 transition-colors">Get Started</a>
+                    <a href="https://t.me/dealmanyBot?start=start" target="_blank" class="bg-slate-700 text-white font-semibold w-full block py-3 rounded-lg hover:bg-slate-600 transition-colors">Get Started</a>
                 </div>
                 <div class="gradient-border p-8 rounded-xl text-center relative overflow-hidden">
                     <div class="absolute top-0 right-0 gradient-bg text-white text-sm font-semibold px-4 py-1 transform translate-x-1/4 rotate-45 translate-y-1/2">Popular</div>
                     <h4 class="text-2xl font-semibold mb-2">1 Month</h4>
-                    <p class="text-4xl font-bold mb-4">70 ⭐</p>
+                    <p class="text-4xl font-bold mb-4">60 ⭐</p>
                     <ul class="text-slate-300 space-y-2 mb-6"><li>Double Rewards</li><li>More Daily Promos</li><li>Image Broadcasts</li></ul>
-                    <a href="https://t.me/your_bot_username_here" target="_blank" class="gradient-bg text-white font-semibold w-full block py-3 rounded-lg hover:opacity-90 transition-opacity">Choose Plan</a>
+                    <a href="https://t.me/DealmanyBot?start=start" target="_blank" class="gradient-bg text-white font-semibold w-full block py-3 rounded-lg hover:opacity-90 transition-opacity">Choose Plan</a>
                 </div>
                 <div class="bg-slate-800/50 p-8 rounded-xl border border-slate-700 text-center">
                     <h4 class="text-2xl font-semibold mb-2">3 Months</h4>
-                    <p class="text-4xl font-bold mb-4">200 ⭐</p>
+                    <p class="text-4xl font-bold mb-4">120 ⭐</p>
                      <ul class="text-slate-400 space-y-2 mb-6"><li>Double Rewards</li><li>More Daily Promos</li><li>Image Broadcasts</li></ul>
-                    <a href="https://t.me/your_bot_username_here" target="_blank" class="bg-slate-700 text-white font-semibold w-full block py-3 rounded-lg hover:bg-slate-600 transition-colors">Get Started</a>
+                    <a href="https://t.me/DealmanyBot?start=start" target="_blank" class="bg-slate-700 text-white font-semibold w-full block py-3 rounded-lg hover:bg-slate-600 transition-colors">Get Started</a>
                 </div>
             </div>
         </section>
